cmake_minimum_required(VERSION 3.20)
project(leetcode2023)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode2023 main.cpp global.h n1.h n49.h n128.h n283.h n11.h n15.h n42.h n3.h n438.h n560.h n239.h n76.h n53.h n56.h n189.h n238.h n41.h n73.h n54.h n48.h n240.h n160.h n206.h n234.h n141.h n142.h n21.h n2.h n19.h n24.h n25.h n138.h n148.h n23.h n94.h n543.h n102.h n98.h n230.h n994.h n208.h n198.h n322.h n139.h n300.h n152.h n416.h n32.h n62.h n64.h n5.h
        n46.h
        n78.h
        n39.h
        n22.h n79.h
        n155.h
        n143.h
        n394.h
        n104.h
        n226.h
        n101.h
        n207.h
        n35.h
        n10.h
        n213.h
        n328.h
        sort.h
        n310.h
        n108.h
        n199.h
        n114.h
        n105.h
        n437.h
        n236.h
        n200.h
        n131.h
        n74.h
        n34.h
        n215.h
        n347.h
        n1143.h
        n75.h
        n1123.h
        n63.h
        n47.h
        n77.h
        n80.h
        n82.h
        n86.h
        n90.h
        n91.h
        n92.h
        n93.h
        n95.h
        n96.h
        n97.h
        n99.h
        n103.h
        n106.h
)
